@@ -18,12 +18,15 @@
 
 package org.apache.kylin.query.relnode;
 
+import static org.apache.kylin.metadata.expression.TupleExpression.ExpressionOperatorEnum.COLUMN;
+
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.calcite.adapter.enumerable.EnumerableAggregate;
 import org.apache.calcite.adapter.enumerable.EnumerableConvention;
@@ -35,6 +38,7 @@ import org.apache.calcite.plan.RelTrait;
 import org.apache.calcite.plan.RelTraitSet;
 import org.apache.calcite.rel.InvalidRelException;
 import org.apache.calcite.rel.RelNode;
+import org.apache.calcite.rel.RelWriter;
 import org.apache.calcite.rel.core.Aggregate;
 import org.apache.calcite.rel.core.AggregateCall;
 import org.apache.calcite.rel.metadata.RelMetadataQuery;
@@ -46,7 +50,10 @@ import org.apache.calcite.schema.FunctionParameter;
 import org.apache.calcite.schema.impl.AggregateFunctionImpl;
 import org.apache.calcite.sql.SqlAggFunction;
 import org.apache.calcite.sql.SqlIdentifier;
+import org.apache.calcite.sql.fun.SqlCountAggFunction;
 import org.apache.calcite.sql.fun.SqlStdOperatorTable;
+import org.apache.calcite.sql.fun.SqlSumAggFunction;
+import org.apache.calcite.sql.fun.SqlSumEmptyIsZeroAggFunction;
 import org.apache.calcite.sql.parser.SqlParserPos;
 import org.apache.calcite.sql.type.InferTypes;
 import org.apache.calcite.sql.type.OperandTypes;
@@ -55,25 +62,44 @@ import org.apache.calcite.sql.type.SqlTypeFamily;
 import org.apache.calcite.sql.validate.SqlUserDefinedAggFunction;
 import org.apache.calcite.util.ImmutableBitSet;
 import org.apache.calcite.util.Util;
+import org.apache.kylin.common.util.Pair;
 import org.apache.kylin.measure.MeasureTypeFactory;
 import org.apache.kylin.measure.ParamAsMeasureCount;
+import org.apache.kylin.measure.stddev.StdDevSumMeasureType;
+import org.apache.kylin.metadata.expression.CaseTupleExpression;
+import org.apache.kylin.metadata.expression.ColumnTupleExpression;
+import org.apache.kylin.metadata.expression.ConstantTupleExpression;
+import org.apache.kylin.metadata.expression.ExpressionColCollector;
+import org.apache.kylin.metadata.expression.ExpressionCountDistributor;
+import org.apache.kylin.metadata.expression.TupleExpression;
+import org.apache.kylin.metadata.filter.ColumnTupleFilter;
+import org.apache.kylin.metadata.filter.CompareTupleFilter;
+import org.apache.kylin.metadata.filter.ConstantTupleFilter;
+import org.apache.kylin.metadata.filter.LogicalTupleFilter;
+import org.apache.kylin.metadata.filter.TupleFilter;
+import org.apache.kylin.metadata.model.CountDistinctExpressionDynamicFunctionDesc;
+import org.apache.kylin.metadata.model.DynamicFunctionDesc;
+import org.apache.kylin.metadata.model.ExpressionDynamicFunctionDesc;
 import org.apache.kylin.metadata.model.FunctionDesc;
 import org.apache.kylin.metadata.model.MeasureDesc;
 import org.apache.kylin.metadata.model.ParameterDesc;
+import org.apache.kylin.metadata.model.StdDevSumFunctionDesc;
+import org.apache.kylin.metadata.model.SumExpressionDynamicFunctionDesc;
 import org.apache.kylin.metadata.model.TblColRef;
 import org.apache.kylin.metadata.realization.SQLDigest.SQLCall;
 import org.apache.kylin.query.schema.OLAPTable;
 
 import com.google.common.base.Preconditions;
 import com.google.common.collect.Lists;
+import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 
 /**
  */
 public class OLAPAggregateRel extends Aggregate implements OLAPRel {
 
-    private final static Map<String, String> AGGR_FUNC_MAP = new HashMap<String, String>();
-    private final static Map<String, Integer> AGGR_FUNC_PARAM_AS_MEASURE_MAP = new HashMap<String, Integer>();
+    final static Map<String, String> AGGR_FUNC_MAP = new HashMap<String, String>();
+    final static Map<String, Integer> AGGR_FUNC_PARAM_AS_MEASURE_MAP = new HashMap<String, Integer>();
 
     static {
         AGGR_FUNC_MAP.put("SUM", "SUM");
@@ -82,6 +108,7 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         AGGR_FUNC_MAP.put("COUNT_DISTINCT", "COUNT_DISTINCT");
         AGGR_FUNC_MAP.put("MAX", "MAX");
         AGGR_FUNC_MAP.put("MIN", "MIN");
+        AGGR_FUNC_MAP.put("GROUPING", "GROUPING");
 
         Map<String, MeasureTypeFactory> udafFactories = MeasureTypeFactory.getUDAFFactories();
         for (Map.Entry<String, MeasureTypeFactory> entry : udafFactories.entrySet()) {
@@ -91,38 +118,27 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         Map<String, Class<?>> udafs = MeasureTypeFactory.getUDAFs();
         for (String func : udafs.keySet()) {
             try {
-                AGGR_FUNC_PARAM_AS_MEASURE_MAP.put(func, ((ParamAsMeasureCount) (udafs.get(func).newInstance())).getParamAsMeasureCount());
+                AGGR_FUNC_PARAM_AS_MEASURE_MAP.put(func,
+                        ((ParamAsMeasureCount) (udafs.get(func).getDeclaredConstructor().newInstance()))
+                                .getParamAsMeasureCount());
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
         }
     }
 
-    private static String getSqlFuncName(AggregateCall aggCall) {
-        String sqlName = aggCall.getAggregation().getName();
-        if (aggCall.isDistinct()) {
-            sqlName = sqlName + "_DISTINCT";
-        }
-        return sqlName;
-    }
-
-    private static String getAggrFuncName(AggregateCall aggCall) {
-        String sqlName = getSqlFuncName(aggCall);
-        String funcName = AGGR_FUNC_MAP.get(sqlName);
-        if (funcName == null) {
-            throw new IllegalStateException("Don't support aggregation " + sqlName);
-        }
-        return funcName;
-    }
-
-    private OLAPContext context;
-    private ColumnRowType columnRowType;
+    OLAPContext context;
+    ColumnRowType columnRowType;
     private boolean afterAggregate;
+    private Map<Integer, AggregateCall> hackAggCalls;
     private List<AggregateCall> rewriteAggCalls;
-    private List<TblColRef> groups;
+    private List<Set<TblColRef>> groups;
     private List<FunctionDesc> aggregations;
+    private boolean rewriting;
 
-    public OLAPAggregateRel(RelOptCluster cluster, RelTraitSet traits, RelNode child, boolean indicator, ImmutableBitSet groupSet, List<ImmutableBitSet> groupSets, List<AggregateCall> aggCalls) throws InvalidRelException {
+    public OLAPAggregateRel(RelOptCluster cluster, RelTraitSet traits, RelNode child, boolean indicator,
+            ImmutableBitSet groupSet, List<ImmutableBitSet> groupSets, List<AggregateCall> aggCalls)
+            throws InvalidRelException {
         super(cluster, traits, child, indicator, groupSet, groupSets, aggCalls);
         Preconditions.checkArgument(getConvention() == OLAPRel.CONVENTION);
         this.afterAggregate = false;
@@ -130,8 +146,26 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         this.rowType = getRowType();
     }
 
+    static String getSqlFuncName(AggregateCall aggCall) {
+        String sqlName = aggCall.getAggregation().getName();
+        if (aggCall.isDistinct()) {
+            sqlName = sqlName + "_DISTINCT";
+        }
+        return sqlName;
+    }
+
+    public static String getAggrFuncName(AggregateCall aggCall) {
+        String sqlName = getSqlFuncName(aggCall);
+        String funcName = AGGR_FUNC_MAP.get(sqlName);
+        if (funcName == null) {
+            throw new IllegalStateException("Non-support aggregation " + sqlName);
+        }
+        return funcName;
+    }
+
     @Override
-    public Aggregate copy(RelTraitSet traitSet, RelNode input, boolean indicator, ImmutableBitSet groupSet, List<ImmutableBitSet> groupSets, List<AggregateCall> aggCalls) {
+    public Aggregate copy(RelTraitSet traitSet, RelNode input, boolean indicator, ImmutableBitSet groupSet,
+            List<ImmutableBitSet> groupSets, List<AggregateCall> aggCalls) {
         try {
             return new OLAPAggregateRel(getCluster(), traitSet, input, indicator, groupSet, groupSets, aggCalls);
         } catch (InvalidRelException e) {
@@ -149,7 +183,8 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         if (getGroupType() == Group.SIMPLE) {
             cost = super.computeSelfCost(planner, mq).multiplyBy(.05);
         } else {
-            cost = super.computeSelfCost(planner, mq).multiplyBy(.05).plus(planner.getCost(getInput(), mq)).multiplyBy(groupSets.size() * 1.5);
+            cost = super.computeSelfCost(planner, mq).multiplyBy(.05).plus(planner.getCost(getInput(), mq))
+                    .multiplyBy(groupSets.size() * 1.5);
         }
         return cost;
     }
@@ -165,15 +200,21 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
 
         // only translate the innermost aggregation
         if (!this.afterAggregate) {
-            addToContextGroupBy(this.groups);
+            List<TblColRef> colRefList = Lists.newArrayList();
+            for (Set<TblColRef> colRefSet : this.groups) {
+                colRefList.addAll(colRefSet);
+            }
+            addToContextGroupBy(colRefList);
             this.context.aggregations.addAll(this.aggregations);
-            this.context.aggrOutCols.addAll(columnRowType.getAllColumns().subList(groups.size(), columnRowType.getAllColumns().size()));
+            this.context.aggrOutCols
+                    .addAll(columnRowType.getAllColumns().subList(groups.size(), columnRowType.getAllColumns().size()));
             this.context.afterAggregate = true;
 
             if (this.context.afterLimit) {
                 this.context.limitPrecedesAggr = true;
             }
         } else {
+            this.context.afterOuterAggregate = true;
             for (AggregateCall aggCall : aggCalls) {
                 // check if supported by kylin
                 if (aggCall.isDistinct()) {
@@ -183,19 +224,23 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         }
     }
 
-    private ColumnRowType buildColumnRowType() {
+    ColumnRowType buildColumnRowType() {
         buildGroups();
         buildAggregations();
 
         ColumnRowType inputColumnRowType = ((OLAPRel) getInput()).getColumnRowType();
-        List<TblColRef> columns = new ArrayList<TblColRef>(this.rowType.getFieldCount());
-        columns.addAll(this.groups);
+        List<TblColRef> columns = new ArrayList<>(this.rowType.getFieldCount());
+        for (Set<TblColRef> groupCols : groups) {
+            String name = groupCols.stream().map(TblColRef::getName).collect(Collectors.toList()).toString();
+            TblColRef groupInnerCol = TblColRef.newInnerColumn(name, TblColRef.InnerDataTypeEnum.LITERAL);
+            columns.add(groupInnerCol);
+        }
 
         // Add group column indicators
         if (indicator) {
             final Set<String> containedNames = Sets.newHashSet();
-            for (TblColRef groupCol : groups) {
-                String base = "i$" + groupCol.getName();
+            for (Set<TblColRef> groupCols : groups) {
+                String base = "i$" + groupCols.stream().map(TblColRef::getName).collect(Collectors.toList());
                 String name = base;
                 int i = 0;
                 while (containedNames.contains(name)) {
@@ -215,7 +260,8 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
             } else {
                 AggregateCall aggCall = this.rewriteAggCalls.get(i);
                 int index = aggCall.getArgList().get(0);
-                aggOutName = getSqlFuncName(aggCall) + "_" + inputColumnRowType.getColumnByIndex(index).getIdentity().replace('.', '_') + "_";
+                aggOutName = getSqlFuncName(aggCall) + "_"
+                        + inputColumnRowType.getColumnByIndex(index).getIdentity().replace('.', '_') + "_";
             }
             TblColRef aggOutCol = TblColRef.newInnerColumn(aggOutName, TblColRef.InnerDataTypeEnum.LITERAL);
             aggOutCol.getColumnDesc().setId("" + (i + 1)); // mark the index of aggregation
@@ -224,7 +270,7 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         return new ColumnRowType(columns);
     }
 
-    private TblColRef buildRewriteColumn(FunctionDesc aggFunc) {
+    TblColRef buildRewriteColumn(FunctionDesc aggFunc) {
         TblColRef colRef;
         if (aggFunc.needRewriteField()) {
             String colName = aggFunc.getRewriteFieldName();
@@ -235,22 +281,73 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         return colRef;
     }
 
-    private void buildGroups() {
+    void buildGroups() {
         ColumnRowType inputColumnRowType = ((OLAPRel) getInput()).getColumnRowType();
-        this.groups = new ArrayList<TblColRef>();
+        this.groups = Lists.newArrayList();
         for (int i = getGroupSet().nextSetBit(0); i >= 0; i = getGroupSet().nextSetBit(i + 1)) {
-            Set<TblColRef> columns = inputColumnRowType.getSourceColumnsByIndex(i);
-            this.groups.addAll(columns);
+            TupleExpression tupleExpression = inputColumnRowType.getTupleExpressionByIndex(i);
+
+            // group by column with operator
+            if (this.context.groupByExpression == false
+                    && !(COLUMN.equals(tupleExpression.getOperator()) && tupleExpression.getChildren().isEmpty())) {
+                this.context.groupByExpression = true;
+            }
+
+            TblColRef groupOutCol = inputColumnRowType.getColumnByIndex(i);
+            if (tupleExpression instanceof ColumnTupleExpression) {
+                this.groups.add(Sets.newHashSet(((ColumnTupleExpression) tupleExpression).getColumn()));
+            } else if (this.context.isDynamicColumnEnabled() && tupleExpression.ifForDynamicColumn()) {
+                Pair<Set<TblColRef>, Set<TblColRef>> cols = ExpressionColCollector.collectColumnsPair(tupleExpression);
+
+                // push down only available for the innermost aggregation
+                boolean ifPushDown = !afterAggregate;
+
+                // if measure columns exist, don't do push down
+                if (ifPushDown && !cols.getSecond().isEmpty()) {
+                    ifPushDown = false;
+                }
+
+                // if existing a dimension which is a derived column, don't do push down
+                if (ifPushDown) {
+                    for (TblColRef dimCol : cols.getFirst()) {
+                        if (!this.context.belongToFactTableDims(dimCol)) {
+                            ifPushDown = false;
+                            break;
+                        }
+                    }
+                }
+
+                if (ifPushDown) {
+                    this.groups.add(Sets.newHashSet(groupOutCol));
+                    this.context.dynGroupBy.put(groupOutCol, tupleExpression);
+                } else {
+                    Set<TblColRef> srcCols = Sets.newHashSet();
+                    srcCols.addAll(cols.getFirst());
+                    srcCols.addAll(cols.getSecond());
+                    this.groups.add(srcCols);
+                    this.context.dynamicFields.remove(groupOutCol);
+                }
+            } else {
+                Set<TblColRef> srcCols = ExpressionColCollector.collectColumns(tupleExpression);
+                // if no source columns, use target column instead
+                if (srcCols.isEmpty()) {
+                    srcCols.add(groupOutCol);
+                }
+                this.groups.add(srcCols);
+            }
         }
     }
 
-    private void buildAggregations() {
+    void buildAggregations() {
         ColumnRowType inputColumnRowType = ((OLAPRel) getInput()).getColumnRowType();
-        this.aggregations = new ArrayList<FunctionDesc>();
-        for (AggregateCall aggCall : this.rewriteAggCalls) {
+        this.aggregations = Lists.newArrayList();
+        this.hackAggCalls = Maps.newHashMap();
+        for (int i = 0; i < this.rewriteAggCalls.size(); i++) {
+            AggregateCall aggCall = this.rewriteAggCalls.get(i);
             ParameterDesc parameter = null;
+            List<Integer> argList = aggCall.getArgList();
             // By default all args are included, UDFs can define their own in getParamAsMeasureCount method.
-            if (!aggCall.getArgList().isEmpty()) {
+            if (!argList.isEmpty()) {
                 List<TblColRef> columns = Lists.newArrayList();
                 String funcName = getSqlFuncName(aggCall);
                 int columnsCount = aggCall.getArgList().size();
@@ -270,33 +367,159 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
                     parameter = ParameterDesc.newInstance(columns.toArray(new TblColRef[columns.size()]));
                 }
             }
+            // Check dynamic aggregation
+            if (!afterAggregate && !rewriting) {
+                if (this.context.isDynamicColumnEnabled() && argList.size() == 1) {
+                    int iRowIdx = argList.get(0);
+                    TupleExpression tupleExpr = inputColumnRowType.getTupleExpressionByIndex(iRowIdx);
+                    if (aggCall.getAggregation() instanceof SqlSumAggFunction
+                            || aggCall.getAggregation() instanceof SqlSumEmptyIsZeroAggFunction) {
+                        // sum (expression)
+                        if (!(tupleExpr instanceof ConstantTupleExpression || tupleExpr instanceof ColumnTupleExpression)) {
+                            ColumnTupleExpression cntExpr = ColumnTupleExpression.getCntColumnTupleExpression();
+                            ExpressionCountDistributor cntDistributor = new ExpressionCountDistributor(cntExpr);
+                            tupleExpr = tupleExpr.accept(cntDistributor);
+                            SumExpressionDynamicFunctionDesc sumDynFunc = new SumExpressionDynamicFunctionDesc(parameter,
+                                    tupleExpr);
+                            this.aggregations.add(sumDynFunc);
+                            continue;
+                        }
+                    } else if (aggCall.getAggregation() instanceof SqlCountAggFunction) {
+                        if (!aggCall.isDistinct()) {
+                            // count column, count(case when)
+                            boolean ifGood = true;
+                            Set<TblColRef> cols = ExpressionColCollector.collectColumns(tupleExpr);
+                            for (TblColRef col : cols) {
+                                if (!this.context.belongToFactTableDims(col)) {
+                                    ifGood = false;
+                                    break;
+                                }
+                            }
+                            if (!ifGood) {
+                                String expression = getAggrFuncName(aggCall);
+                                FunctionDesc aggFunc = FunctionDesc.newInstance(expression, parameter, null);
+                                this.aggregations.add(aggFunc);
+                                continue;
+                            }
+                            tupleExpr = getCountSumExpression(tupleExpr);
+                            if (tupleExpr == null) {
+                                continue;
+                            }
+
+                            TblColRef column = TblColRef.newInnerColumn(tupleExpr.getDigest(),
+                                    TblColRef.InnerDataTypeEnum.LITERAL);
+
+                            SumExpressionDynamicFunctionDesc sumDynFunc = new SumExpressionDynamicFunctionDesc(
+                                    ParameterDesc.newInstance(column), tupleExpr);
+
+                            inputColumnRowType.replaceColumnByIndex(iRowIdx, column, tupleExpr);
+
+                            AggregateCall newAggCall = AggregateCall.create(SqlStdOperatorTable.SUM0, false,
+                                    aggCall.getArgList(), -1, aggCall.getType(), aggCall.getName());
+                            this.hackAggCalls.put(i, newAggCall);
+
+                            this.context.dynamicFields.put(column, aggCall.getType());
+
+                            this.aggregations.add(sumDynFunc);
+                            continue;
+                        } else {
+                            // count (distinct expression)
+                            if (tupleExpr instanceof CaseTupleExpression) {
+                                CaseTupleExpression caseTupleExpr = (CaseTupleExpression) tupleExpr;
+                                if (caseTupleExpr.getWhenList().size() > 1 || caseTupleExpr.getElseExpr() != null) {
+                                    continue;
+                                }
+                                CountDistinctExpressionDynamicFunctionDesc cntDistDynFunc = new CountDistinctExpressionDynamicFunctionDesc(
+                                        parameter, caseTupleExpr);
+                                this.aggregations.add(cntDistDynFunc);
+
+                                TblColRef colRef = cntDistDynFunc.getParameter().getColRef();
+                                colRef.getColumnDesc().setDatatype(cntDistDynFunc.getRewriteFieldType().getName());
+                                continue;
+                            }
+                        }
+                    }
+                }
+
+                if (aggCall.getAggregation() instanceof SqlUserDefinedAggFunction) {
+                    if (aggCall.getAggregation().getName().equals(StdDevSumMeasureType.FUNC_STDDEV_SUM)) {
+                        assert argList.size() == 2;
+                        TblColRef gbCol = inputColumnRowType.getColumnByIndex(argList.get(0));
+                        TblColRef mCol = inputColumnRowType.getColumnByIndex(argList.get(1));
+
+                        TblColRef column = TblColRef.newInnerColumn(StdDevSumFunctionDesc.getDigest(gbCol, mCol),
+                                TblColRef.InnerDataTypeEnum.LITERAL);
+
+                        StdDevSumFunctionDesc stdDevSumFunc = new StdDevSumFunctionDesc(
+                                ParameterDesc.newInstance(column), Lists.newArrayList(gbCol, mCol));
+
+                        inputColumnRowType.replaceColumnByIndex(argList.get(1), column,
+                                new ColumnTupleExpression(stdDevSumFunc.getRewriteFieldType(), column));
+
+                        RelDataTypeFactory typeFactory = getCluster().getTypeFactory();
+                        RelDataType fieldType = OLAPTable.createSqlType(typeFactory,
+                                stdDevSumFunc.getRewriteFieldType(), true);
+                        this.context.dynamicFields.put(column, fieldType);
+
+                        this.aggregations.add(stdDevSumFunc);
+                        continue;
+                    }
+                }
+            }
             String expression = getAggrFuncName(aggCall);
             FunctionDesc aggFunc = FunctionDesc.newInstance(expression, parameter, null);
             this.aggregations.add(aggFunc);
         }
     }
 
+    public boolean needRewrite() {
+        boolean hasRealization = (null != this.context.realization);
+        return hasRealization && !this.afterAggregate;
+    }
+
     @Override
     public void implementRewrite(RewriteImplementor implementor) {
         // only rewrite the innermost aggregation
-        boolean hasRealization = (null != this.context.realization);
-        if (hasRealization && !this.afterAggregate) {
+        if (needRewrite()) {
             translateAggregation();
             buildRewriteFieldsAndMetricsColumns();
         }
 
         implementor.visitChild(this, getInput());
 
+        this.rewriting = true;
+
         // only rewrite the innermost aggregation
-        if (hasRealization && !this.afterAggregate) {
+        if (needRewrite()) {
             // rewrite the aggCalls
-            this.rewriteAggCalls = new ArrayList<AggregateCall>(aggCalls.size());
+            this.rewriteAggCalls = Lists.newArrayListWithExpectedSize(aggCalls.size());
             for (int i = 0; i < this.aggCalls.size(); i++) {
-                AggregateCall aggCall = this.aggCalls.get(i);
-                FunctionDesc cubeFunc = this.context.aggregations.get(i);
-                if (cubeFunc.needRewrite()) {
-                    aggCall = rewriteAggregateCall(aggCall, cubeFunc);
+                AggregateCall aggCall = this.hackAggCalls.get(i) != null ? this.hackAggCalls.get(i)
+                        : this.aggCalls.get(i);
+                if (SqlStdOperatorTable.GROUPING == aggCall.getAggregation()) {
+                    this.rewriteAggCalls.add(aggCall);
+                    continue;
                 }
+
+                FunctionDesc cubeFunc = this.context.aggregations.get(i);
+                // filter needn,t rewrite aggfunc
+                // if it's not a cube, then the "needRewriteField func" should not resort to any rewrite fields,
+                // which do not exist at all
+                if (!(noPrecaculatedFieldsAvailable() && cubeFunc.needRewriteField())) {
+                    if (cubeFunc.needRewrite()) {
+                        aggCall = rewriteAggregateCall(aggCall, cubeFunc);
+                    }
+
+                    //if not dim as measure (using some measure), differentiate it with a new class
+                    if (cubeFunc.getMeasureType() != null &&
+                    // DimCountDistinct case
+                            cubeFunc.getMeasureType().needRewriteField()) {
+                        aggCall = new KylinAggregateCall(aggCall, cubeFunc);
+                    }
+                } else {
+                    logger.info(aggCall + "skip rewriteAggregateCall because no pre-aggregated field available");
+                }
+
                 this.rewriteAggCalls.add(aggCall);
                 this.context.aggrSqlCalls.add(toSqlCall(aggCall));
             }
@@ -306,9 +529,10 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         this.rowType = this.deriveRowType();
         this.columnRowType = this.buildColumnRowType();
 
+        this.rewriting = false;
     }
 
-    private SQLCall toSqlCall(AggregateCall aggCall) {
+    SQLCall toSqlCall(AggregateCall aggCall) {
         ColumnRowType inputColumnRowType = ((OLAPRel) getInput()).getColumnRowType();
 
         String function = getSqlFuncName(aggCall);
@@ -320,13 +544,39 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         return new SQLCall(function, args);
     }
 
-    private void translateAggregation() {
+    void translateAggregation() {
         if (!noPrecaculatedFieldsAvailable()) {
             // now the realization is known, replace aggregations with what's defined on MeasureDesc
             List<MeasureDesc> measures = this.context.realization.getMeasures();
             List<FunctionDesc> newAggrs = Lists.newArrayList();
             for (FunctionDesc aggFunc : this.aggregations) {
-                newAggrs.add(findInMeasures(aggFunc, measures));
+                if (aggFunc instanceof DynamicFunctionDesc) {
+                    if (!aggFunc.isDimensionAsMetric()) {
+                        DynamicFunctionDesc dynAggFunc = (DynamicFunctionDesc) aggFunc;
+                        Map<TblColRef, FunctionDesc> innerOldAggrs = dynAggFunc.getRuntimeFuncMap();
+                        Map<TblColRef, FunctionDesc> innerNewAggrs = Maps
+                                .newHashMapWithExpectedSize(innerOldAggrs.size());
+                        for (TblColRef key : innerOldAggrs.keySet()) {
+                            innerNewAggrs.put(key, findInMeasures(innerOldAggrs.get(key), measures));
+                        }
+                        dynAggFunc.setRuntimeFuncMap(innerNewAggrs);
+                        // update the type of the dynamic fields, since the original one is different
+                        if (dynAggFunc instanceof CountDistinctExpressionDynamicFunctionDesc) {
+                            dynAggFunc.setReturnType(innerNewAggrs.values().iterator().next().getReturnType());
+                            TblColRef paramCol = aggFunc.getParameter().getColRefs().get(0);
+                            RelDataTypeFactory typeFactory = getCluster().getTypeFactory();
+                            RelDataType fieldType = OLAPTable.createSqlType(typeFactory,
+                                    dynAggFunc.getRewriteFieldType(), true);
+                            this.context.dynamicFields.put(paramCol, fieldType);
+                        }
+                    } else {
+                        TblColRef paramCol = aggFunc.getParameter().getColRefs().get(0);
+                        this.context.dynamicFields.remove(paramCol);
+                    }
+                    newAggrs.add(aggFunc);
+                } else {
+                    newAggrs.add(findInMeasures(aggFunc, measures));
+                }
             }
             this.aggregations.clear();
             this.aggregations.addAll(newAggrs);
@@ -337,32 +587,61 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         }
     }
 
-    private FunctionDesc findInMeasures(FunctionDesc aggFunc, List<MeasureDesc> measures) {
+    FunctionDesc findInMeasures(FunctionDesc aggFunc, List<MeasureDesc> measures) {
         for (MeasureDesc m : measures) {
-            if (aggFunc.equals(m.getFunction()))
+            if (aggFunc.equals(m.getFunction())) {
                 return m.getFunction();
+            }
         }
+
+        // no count(col) measure found, use count(1) to replace it.
+        if (aggFunc.isCount()) {
+            FunctionDesc func = findCountConstantFunc(measures);
+            if (func != null)
+                return func;
+        }
+
         return aggFunc;
     }
 
-    private void buildRewriteFieldsAndMetricsColumns() {
+    private FunctionDesc findCountConstantFunc(List<MeasureDesc> measures) {
+        for (MeasureDesc measure : measures) {
+            if (measure.getFunction().isCountConstant()) {
+                return measure.getFunction();
+            }
+        }
+        return null;
+    }
+
+    void buildRewriteFieldsAndMetricsColumns() {
         ColumnRowType inputColumnRowType = ((OLAPRel) getInput()).getColumnRowType();
         RelDataTypeFactory typeFactory = getCluster().getTypeFactory();
         for (int i = 0; i < this.aggregations.size(); i++) {
             FunctionDesc aggFunc = this.aggregations.get(i);
 
             if (aggFunc.isDimensionAsMetric()) {
-                addToContextGroupBy(aggFunc.getParameter().getColRefs());
+                List<TblColRef> neededCols = aggFunc instanceof ExpressionDynamicFunctionDesc
+                        ? Lists.newArrayList(ExpressionColCollector
+                                .collectColumns(((ExpressionDynamicFunctionDesc) aggFunc).getTupleExpression()))
+                        : aggFunc.getParameter().getColRefs();
+                addToContextGroupBy(neededCols);
                 continue; // skip rewrite, let calcite handle
             }
 
-            if (aggFunc.needRewriteField()) {
-                String rewriteFieldName = aggFunc.getRewriteFieldName();
-                RelDataType rewriteFieldType = OLAPTable.createSqlType(typeFactory, aggFunc.getRewriteFieldType(), true);
-                this.context.rewriteFields.put(rewriteFieldName, rewriteFieldType);
+            List<FunctionDesc> aggFuncList = Lists.newArrayList(aggFunc);
+            if (aggFunc instanceof DynamicFunctionDesc) {
+                aggFuncList.addAll(((DynamicFunctionDesc) aggFunc).getRuntimeFuncMap().values());
+            }
 
-                TblColRef column = buildRewriteColumn(aggFunc);
-                this.context.metricsColumns.add(column);
+            for (FunctionDesc entry : aggFuncList) {
+                if (entry.needRewriteField()) {
+                    String rewriteFieldName = entry.getRewriteFieldName();
+                    RelDataType rewriteFieldType = OLAPTable.createSqlType(typeFactory, entry.getRewriteFieldType(),
+                            true);
+                    this.context.rewriteFields.put(rewriteFieldName, rewriteFieldType);
+                    TblColRef column = buildRewriteColumn(entry);
+                    this.context.metricsColumns.add(column);
+                }
             }
 
             AggregateCall aggCall = this.rewriteAggCalls.get(i);
@@ -377,31 +656,24 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         }
     }
 
-    private void addToContextGroupBy(List<TblColRef> colRefs) {
+    void addToContextGroupBy(List<TblColRef> colRefs) {
         for (TblColRef col : colRefs) {
-            if (col.isInnerColumn() == false && this.context.belongToContextTables(col))
+            if (!col.isInnerColumn() && this.context.belongToContextTables(col))
                 this.context.groupByColumns.add(col);
         }
     }
 
-    private boolean noPrecaculatedFieldsAvailable() {
+    public boolean noPrecaculatedFieldsAvailable() {
         return !this.context.hasPrecalculatedFields() || !RewriteImplementor.needRewrite(this.context);
     }
 
     @SuppressWarnings("deprecation")
     private AggregateCall rewriteAggregateCall(AggregateCall aggCall, FunctionDesc func) {
-
-        // if it's not a cube, then the "needRewriteField func" should not resort to any rewrite fields, which do not exist at all
-        if (noPrecaculatedFieldsAvailable() && func.needRewriteField()) {
-            logger.info(func + "skip rewriteAggregateCall because no pre-aggregated field available");
-            return aggCall;
-        }
-
         // rebuild function
         String callName = getSqlFuncName(aggCall);
         RelDataType fieldType = aggCall.getType();
         SqlAggFunction newAgg = aggCall.getAggregation();
-        
+
         Map<String, Class<?>> udafMap = func.getMeasureType().getRewriteCalciteAggrFunctions();
         if (func.isCount()) {
             newAgg = SqlStdOperatorTable.SUM0;
@@ -433,7 +705,7 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
     /**
      * truncate Arg List according to UDAF's "add" method parameter count
      */
-    private List<Integer> truncArgList(List<Integer> argList, Class<?> udafClazz) {
+    List<Integer> truncArgList(List<Integer> argList, Class<?> udafClazz) {
         int argListLength = argList.size();
         for (Method method : udafClazz.getMethods()) {
             if (method.getName().equals("add")) {
@@ -443,7 +715,7 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         return argList.subList(0, argListLength);
     }
 
-    private SqlAggFunction createCustomAggFunction(String funcName, RelDataType returnType, Class<?> customAggFuncClz) {
+    SqlAggFunction createCustomAggFunction(String funcName, RelDataType returnType, Class<?> customAggFuncClz) {
         RelDataTypeFactory typeFactory = getCluster().getTypeFactory();
         SqlIdentifier sqlIdentifier = new SqlIdentifier(funcName, new SqlParserPos(1, 1));
         AggregateFunction aggFunction = AggregateFunctionImpl.create(customAggFuncClz);
@@ -454,7 +726,9 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
             argTypes.add(type);
             typeFamilies.add(Util.first(type.getSqlTypeName().getFamily(), SqlTypeFamily.ANY));
         }
-        return new SqlUserDefinedAggFunction(sqlIdentifier, ReturnTypes.explicit(returnType), InferTypes.explicit(argTypes), OperandTypes.family(typeFamilies), aggFunction, false, false);
+        return new SqlUserDefinedAggFunction(sqlIdentifier, ReturnTypes.explicit(returnType),
+                InferTypes.explicit(argTypes), OperandTypes.family(typeFamilies), aggFunction, false, false,
+                typeFactory);
     }
 
     @Override
@@ -488,5 +762,63 @@ public class OLAPAggregateRel extends Aggregate implements OLAPRel {
         RelTraitSet oldTraitSet = this.traitSet;
         this.traitSet = this.traitSet.replace(trait);
         return oldTraitSet;
+    }
+
+    public List<AggregateCall> getRewriteAggCalls() {
+        return rewriteAggCalls;
+    }
+
+    @Override
+    public RelWriter explainTerms(RelWriter pw) {
+        return super.explainTerms(pw).item("ctx",
+                context == null ? "" : String.valueOf(context.id) + "@" + context.realization);
+    }
+
+    private TupleExpression getCountSumExpression(TupleExpression tupleExpr) {
+        TupleExpression zeroExpr = ConstantTupleExpression.ZERO;
+        TupleExpression cntExpr = ColumnTupleExpression.getCntColumnTupleExpression();
+
+        List<Pair<TupleFilter, TupleExpression>> whenList = Lists.newArrayListWithExpectedSize(1);
+        if (tupleExpr instanceof ColumnTupleExpression) {
+            TupleFilter whenFilter = new CompareTupleFilter(TupleFilter.FilterOperatorEnum.ISNOTNULL);
+            whenFilter.addChild(new ColumnTupleFilter(((ColumnTupleExpression) tupleExpr).getColumn()));
+            whenList.add(new Pair<>(whenFilter, cntExpr));
+        } else if (tupleExpr instanceof CaseTupleExpression) {
+            CaseTupleExpression caseTupleExpr = (CaseTupleExpression) tupleExpr;
+            for (Pair<TupleFilter, TupleExpression> entry : caseTupleExpr.getWhenList()) {
+                TupleFilter whenFilter = new LogicalTupleFilter(TupleFilter.FilterOperatorEnum.AND);
+                TupleFilter filter = getIsNotNullFilterFromExpression(entry.getSecond());
+                if (filter == null) {
+                    return null;
+                }
+                whenFilter.addChild(filter);
+                whenFilter.addChild(entry.getFirst());
+                whenList.add(new Pair<>(whenFilter, cntExpr));
+            }
+            if (caseTupleExpr.getElseExpr() != null) {
+                TupleFilter filter = getIsNotNullFilterFromExpression(caseTupleExpr.getElseExpr());
+                if (filter == null) {
+                    return null;
+                }
+                whenList.add(new Pair<>(filter, cntExpr));
+            }
+        }
+
+        TupleExpression ret = new CaseTupleExpression(whenList, zeroExpr);
+        ret.setDigest("_KY_COUNT(" + tupleExpr.getDigest() + ")");
+        return ret;
+    }
+
+    private TupleFilter getIsNotNullFilterFromExpression(TupleExpression tupleExpr) {
+        TupleFilter filter = new CompareTupleFilter(TupleFilter.FilterOperatorEnum.ISNOTNULL);
+        if (tupleExpr instanceof ColumnTupleExpression) {
+            filter.addChild(new ColumnTupleFilter(((ColumnTupleExpression) tupleExpr).getColumn()));
+        } else if (tupleExpr instanceof ConstantTupleExpression) {
+            filter.addChild(new ConstantTupleFilter(((ConstantTupleExpression) tupleExpr).getValue()));
+        } else {
+            logger.warn("Cannot get IsNullFilter from Expression {}", tupleExpr);
+            filter = null;
+        }
+        return filter;
     }
 }
